[tool.poetry]
name = "throat"
version = "1.0.0"
description = "Open Source Link Aggregator"
authors = []
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
bcrypt = "^3.2.0"
beautifulsoup4 = "^4.9.3"
boto3 = "^1.16.43"
flask = "^2.1.0"
flask-babel = "^2.0.0"
flask-caching = "^2.0"
flask-cloudy = "^1.1.0"
flask-jwt-extended = "^4.4.0"
flask-limiter = "^1.4"
flask-login = "^0.6.0"
flask-mail = "^0.9.1"
flask-redis = "^0.4.0"
flask-socketio = "^5.3"
flask-talisman = "^0.7.0"
flask-webpack = "^0.1.0"
flask-wtf = "^1.1"
misaka = "^2.1.1"
psycopg2 = "^2.8.6"
pyotp = "^2.4.1"
redis = "^3.5.3"
requests = "^2.28.2"
pytest = "^7.2.1"
pytest-flask = "^1.2.0"
qrcode = "^7.4.2"
black = "^23.1.0"
gevent = "^22.10.2"
wheezy-html = "^3.0.1"
wheezy-template = "^3.1.0"
wheezy-extractor = "^1.0.1"
pyyaml = "^5.4"
wtforms = "^3.0.1"
email-validator = "^1.3.1"
peewee = "^3.15.4"
python-magic = "^0.4.27"
pillow = "^9.4.0"
mutagen = "^1.46.0"
fasteners = "^0.18"
python-keycloak = "^2.12.0"
tinycss2 = "^1.2.1"
captcha = "^0.4"
sendgrid = "^6.9.7"
pyfcm = "^1.5.4"
feedgen = "^0.9.0"
peewee-migrate = "^1.6.6"
oic = "^1.5.0"
gevent-websocket = "^0.10.1"
gunicorn = "^20.1.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"
pytest = "^7.2.1"
pre-commit = "^3.0.4"
mock = "^5.0.1"
pyrsistent = "^0.19.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
